--- a/registration.html
+++ b/registration.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Registration</title>
 </head>
 <body>
-    <header>
+    <header class="registration-nav">
         <h1>Registration Form</h1>
 
         <nav>
@@ -15,10 +16,20 @@
 
         </nav>
     </header>
-    <div>
-        <input type="text" placeholder="Please Insert your email">
-        <input type="text" placeholder="Enter Your First Name">
-        <input type="text" placeholder="Enter Your Last Name"> 
-    </div>
+    <main>
+        <div class>
+            <input type="text" id="txtFirstName" placeholder="Enter Your First Name">
+            <input type="text" id="txtLastName" placeholder="Enter Your Last Name"> 
+            <input type="email" id="txtEmail" placeholder="Enter your email">
+            <input type="text" id="txtPassword" placeholder="Enter Your Password">
+            <input type="text" id="txtPhone" name="telField" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="000-000-0000">
+            <input type="number" id="txtAge" placeholder="Please Enter Your Age">
+
+            <button id="btnRegister">Register</button>
+        </div>
+    </main>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="scripts/storageManager.js"></script>
+    <script src="scripts/resgistration.js"></script>
 </body>
 </html>
