--- a/users.html
+++ b/users.html
@@ -6,28 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Login</title>
+    <title>User Informaton</title>
 </head>
 <body>
-    <header class="register">
-        <h1>HOME</h1>
+    <header>
+        <h1>User Information</h1>
 
         <nav>
             <a href="index.html">Home</a>
-            <a href="registration.html">Registration</a>
-
+            <a href="registration.html">Register</a>
         </nav>
     </header>
-    <main >
-        <div class="login-container">
-            <p class="alert-error hide" id="alertError">Here is a  list of errors</p>
-            <input type="text" id="txtUserName" placeholder="Please Insert your email">
-            <input type="text" id="txtPassword" placeholder="Please Enter your password">
-            <button id="btnLogin">Login</button>
-        </div>
-    </main>
+    <table class="table table-striped">
+        <thead>
+            <th>Username</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Phone #</th>
+            <th>Age</th>
+        </thead>
+        <tbody id="users">
+
+        </tbody>
+    </table>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="scripts/storageManager.js"></script>
-    <script src="scripts/login.js"></script>
+    <script src="scripts/list.js"></script>
 </body>
 </html>
